test_programs/compile_failure/shl_signed_regression_9592/src/main.nr
fn main() -> pub i64 {
    comptime {
        func_1()
    }
}
unconstrained fn func_1() -> i64 {
    (-1525866727742442465_i64 / -7342926532602101880_i64) << func_2()
}
unconstrained fn func_2() -> i64 {
    -877061792390071735_i64
}
